# OpenGLBoilerplate

./: CMakeLists.txt  Shader.cpp  Shader.h  main.cpp
